Navbar alignment fix

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -25,6 +25,6 @@
 // Navbar styles
 .nav {
   float: right;
-  line-height: 1;
+  line-height: 1.25rem;
   word-spacing: 1rem;
 }
