--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,10 +9,10 @@
   --gray-700: #495057;
   --gray-800: #343a40;
   --gray-900: #212529;
-  --custom-dark-001: hsl(200, 3%, 12%);
-  --custom-dark-002: hsl(0, 0%, 85%);
-  --custom-link-color: rgba(255, 255, 255, 0.75);
-  --custom-link-hover: #fff;
+  --dark-poole-001: hsl(200, 3%, 12%);
+  --dark-poole-002: hsl(0, 0%, 85%);
+  --dark-poole-link-color: rgba(255, 255, 255, 0.75);
+  --dark-poole-link-hover: #fff;
 
   --red: #fa5252;
   --pink: #e64980;
@@ -73,12 +73,12 @@
 }
 
 // Dark Poole theme
-[data-theme="darkpoole"] {
-  --body-color: var(--custom-dark-002);
-  --body-bg: var(--custom-dark-001);
-  --heading-color: var(--custom-dark-002);
-  --link-color: var(--custom-link-color);
-  --link-hover-color: var(--custom-link-hover);
+[data-theme="dark-poole"] {
+  --body-color: var(--dark-poole-002);
+  --body-bg: var(--dark-poole-001);
+  --heading-color: var(--dark-poole-002);
+  --link-color: var(--dark-poole-link-color);
+  --link-hover-color: var(--dark-poole-link-hover);
   --border-color: rgba(255, 255, 255, 0.15);
   --code-bg: var(--gray-900);
 }
